@@ -1,3 +1,8 @@
+2005-10-14  Junichi Uekawa  <dancer@debian.org>
+
+	* Documentation/pbuilder-doc.xml: update documentation to include 
+	IRC channel specification
+
 2005-10-09  Junichi Uekawa  <dancer@debian.org>
 
 	* Documentation/pbuilder-doc.xml: update documentation on development
